Update funcoes.html and funcoes.md to adjust background split alignment in presentation sections for consistency

--- a/funcoes.html
+++ b/funcoes.html
@@ -21,7 +21,7 @@
 .big{
   font-size: 1.5rem;
 }
-;background-color:#d6e0e1;background-image:none;--marpit-advanced-background-split:40%;" data-marpit-pagination-total="33" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;images/blocks.jpg&quot;);"></figure></div></section></foreignObject><foreignObject width="60%" height="720"><section id="1" data-class="lead" data-footer="F.P. - Albert E. F. Muritiba" data-paginate="true" data-background-color="#d6e0e1" data-theme="default" data-style=".small{
+;background-color:#d6e0e1;background-image:none;--marpit-advanced-background-split:40%;" data-marpit-pagination-total="33" data-marpit-advanced-background="background" data-marpit-advanced-background-split="left"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;images/blocks.jpg&quot;);"></figure></div></section></foreignObject><foreignObject width="60%" height="720" x="40%"><section id="1" data-class="lead" data-footer="F.P. - Albert E. F. Muritiba" data-paginate="true" data-background-color="#d6e0e1" data-theme="default" data-style=".small{
   font-size: 0.75rem;
 }
 .big{
@@ -33,7 +33,7 @@
 .big{
   font-size: 1.5rem;
 }
-;background-color:#d6e0e1;background-image:none;--marpit-advanced-background-split:40%;" data-marpit-pagination-total="33" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
+;background-color:#d6e0e1;background-image:none;--marpit-advanced-background-split:40%;" data-marpit-pagination-total="33" data-marpit-advanced-background="content" data-marpit-advanced-background-split="left">
 <h1 id="fun%C3%A7%C3%B5es-em-python">Funções em Python</h1>
 <p>Quando nos deparamos com um problema complexo, é comum quebrá-lo em partes menores.<br />
 Tratamos cada parte separadamente, resolvendo-a de forma isolada.</p>
@@ -46,7 +46,7 @@ Tratamos cada parte separadamente, resolvendo-a de forma isolada.</p>
 .big{
   font-size: 1.5rem;
 }
-" lang="pt-BR" class="lead" data-marpit-pagination="1" style="" data-marpit-pagination-total="33" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="2" data-marpit-fragments="6" data-class="lead" data-footer="F.P. - Albert E. F. Muritiba" data-paginate="true" data-background-color="#d6e0e1" data-theme="default" data-style=".small{
+" lang="pt-BR" class="lead" data-marpit-pagination="1" style="" data-marpit-pagination-total="33" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="left"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="2" data-marpit-fragments="6" data-class="lead" data-footer="F.P. - Albert E. F. Muritiba" data-paginate="true" data-background-color="#d6e0e1" data-theme="default" data-style=".small{
   font-size: 0.75rem;
 }
 .big{
